--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -145,6 +145,7 @@
     <string name="settings_widgets_widget4x2_wind_font_summary">По умолчанию 14sp</string>
     <string name="settings_widgets_widget4x2_custom_font_title">Настройка шрифтов</string>
     <string name="settings_widgets_widget4x2_custom_font_summary">Настройка размера шрифта для элементов виджета</string>
+    <string name="settings_click_actions">Действия по нажатию</string>
     <string name="settings_widgets_widget4x1">Виджет 4x1</string>
     <string name="settings_show_info_title">Отображение данных</string>
     <string name="settings_show_info_summary">Показывать или скрыть элементы интерфейса</string>
