--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -73,6 +73,16 @@
     <string name="weather_sunset">"Sunset: "</string>
     <string name="weather_forecast_empty">--</string>
     <string name="weather_cond_overcast">Overcast</string>
+    <string name="weather_cond_sunny">Sunny</string>
+    <string name="weather_cond_chancerain">Chance of rain</string>
+    <string name="weather_cond_sleet">Sleet</string>
+    <string name="weather_cond_lightsnow">Light snow</string>
+    <string name="weather_cond_rain">Rain</string>
+    <string name="weather_cond_cloudy">Cloudy</string>
+    <string name="weather_cond_fog">Fog</string>
+    <string name="weather_cond_rainstorm">Rainstorm</string>
+    <string name="weather_cond_snow">Snow</string>
+    <string name="weather_cond_t_storms">Thunderstorms</string>
     <string name="settings_category_update">Update settings</string>
     <string name="settings_category_update_sum">Settings for autoupdate and autoupdate time</string>
     <string name="settings_category_animation">Animation settings</string>
