--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -11,12 +11,15 @@
     <string name="donations_google_android_market_donate_button">¡Donar!</string>
     <string name="donations_google_android_market_text">¿Cuánto?</string>
     <string name="donations_paypal">PayPal</string>
+    <string name="donations_paypal_item_name">InApp Donation</string>
     <string name="donations_paypal_description">¡Puedes elegir cuánto quieres donar después de pulsar el botón!</string>
     <string name="donations_thanks_dialog_title">¡Gracias!</string>
     <string name="donations_thanks_dialog">"¡Gracias por donar!\n¡Te lo agradezco mucho!"</string>
     <string name="app_name">Tiempo BZ</string>
     <string name="changelog">Lista de cambios</string>
     <string name="close">Salir</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancelar</string>
     <string name="donate">Donar</string>
     <string name="settings_check_updates_title">Buscar actualizaciones</string>
     <string name="settings_check_updates_summary">Buscar actualizaciones al iniciar la aplicación</string>
@@ -29,7 +32,7 @@
     <string name="about_version">Versión:</string>
     <string name="about_author">Autor:</string>
     <string name="about_social">Enlaces:</string>
-    <string name="about_for_translators">Traductoes:</string>
+    <string name="about_for_translators">Traducción:</string>
     <string name="about_for_translators_text">Si deseas ayudar con la traducción de esta aplicación a tu idioma, visita mi página de github (usando el botón de arriba) para ver todos los recursos</string>
     <string name="about_sunny">Soleado</string>
     <string name="about_sunny_night">Noche calurosa</string>
@@ -73,6 +76,16 @@
     <string name="weather_sunset">"Puesta del sol: "</string>
     <string name="weather_forecast_empty">--</string>
     <string name="weather_cond_overcast">Cubierto</string>
+    <string name="weather_cond_sunny">Soleado</string>
+    <string name="weather_cond_chancerain">Probabilidad de lluvia</string>
+    <string name="weather_cond_sleet">Aguanieve</string>
+    <string name="weather_cond_lightsnow">Nieve ligera</string>
+    <string name="weather_cond_rain">Llubia</string>
+    <string name="weather_cond_cloudy">Nublado</string>
+    <string name="weather_cond_fog">Niebla</string>
+    <string name="weather_cond_rainstorm">Temporal de lluvia</string>
+    <string name="weather_cond_snow">Nieve</string>
+    <string name="weather_cond_t_storms">Tormentas</string>
     <string name="settings_category_update">Actualizaciones</string>
     <string name="settings_category_update_sum">Configurar las actualizaciones del clima y del programa</string>
     <string name="settings_category_animation">Animaciones</string>
@@ -107,8 +120,8 @@
     <string name="settings_update_wifi_only_summary">Actualizar automáticamente el pronóstico del tiempo sólo cuando se disponga de conexión Wifi</string>
     <string name="settings_update_roaming_title">Actualización en itinerancia</string>
     <string name="settings_update_roaming_summary">Actualizar automáticamente el pronóstico del tiempo en itinerancia. Tenga en cuenta que usted puede tener un coste adicional en su factura de teléfono</string>
-    <string name="settings_category_appearance">Apariencia</string>
-    <string name="settings_category_appearance_sum">Configurar la apariencia (unidades de medida, color de texto, etc)</string>
+    <string name="settings_category_appearance">Aspecto</string>
+    <string name="settings_category_appearance_sum">Configurar el aspecto (unidades de medida, color de texto, etc) de la pantalla principal</string>
     <string name="settings_category_miui">MIUI ROMs</string>
     <string name="settings_category_miui_sum">Configurar opciones MIUI (activar/desactivar, borrar datos, etc)</string>
     <string name="settings_miui_support_summary">Activar para dar soporte a los widgets nativos de MIUI Weather</string>
@@ -119,20 +132,21 @@
     <string name="clear_miui_data_summary">Borra la base de datos del proveedor de MIUI Weather</string>
     <string name="clear_miui_data_dialog">Eliminar MIUI Weather</string>
     <string name="clear_miui_data_dialog_text">Base de datos del proveedor de MIUI Weather eliminada!</string>
+    <string name="clear_miui_data_dialog_ask">Seguro que desea borrar la base de datos del proveedor de MIUI Weather?</string>
     <string name="settings_time_format_12h">Formato 12h</string>
     <string name="settings_show_weather_icons_title">Mostrar iconos del tiempo</string>
     <string name="settings_show_weather_icons_summary">Mostrar iconos del tiempo (en lugar de la descripción textual del tiempo) en el pronóstico de 3 días</string>
     <string name="settings_notification_text_color_summary">Texto y color iconos de las notificaciones</string>
     <string name="settings_notification_color_title">Color de la barra de estado</string>
     <string name="settings_category_widgets">Widgets</string>
-    <string name="settings_category_widgets_sum">Configurar la apariencia y acciones de los widgets</string>
+    <string name="settings_category_widgets_sum">Configurar el aspecto y acciones de los widgets</string>
     <string name="settings_widgets_click_clock_title">Clic en el reloj</string>
     <string name="settings_widgets_click_clock_summary">Seleccione la aplicación que se iniciará al tocar el reloj</string>
     <string name="settings_widgets_click_weather_title">Clic en la previsión</string>
     <string name="settings_widgets_click_weather_summary">Seleccione la aplicación que se iniciará al tocar la previosión del tiempo</string>
     <string name="settings_widgets_widget4x2">Widget 4x2</string>
     <string name="settings_widgets_widget4x2_desc_font_title">Descripción del tiempo</string>
-    <string name="settings_widgets_widget4x2_desc_font_summary">Por defecto22sp</string>
+    <string name="settings_widgets_widget4x2_desc_font_summary">Por defecto 22sp</string>
     <string name="settings_widgets_widget4x2_clock_font_title">Reloj</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">Por defecto 50sp</string>
     <string name="settings_widgets_widget4x2_date_font_title">Fecha</string>
@@ -147,6 +161,7 @@
     <string name="settings_widgets_widget4x2_wind_font_summary">Por defecto 14sp</string>
     <string name="settings_widgets_widget4x2_custom_font_title">Tamaño de la fuente</string>
     <string name="settings_widgets_widget4x2_custom_font_summary">Se activa el tamaño personalizado de la fuente para el widget</string>
+    <string name="settings_click_actions">Acciones al tocar</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
     <string name="settings_show_info_title">Mostrar información</string>
     <string name="settings_show_info_summary">Mostrar u ocultar elementos de la interfaz</string>
@@ -187,7 +202,7 @@
     <string name="main_screen_text_color_summary">El color del texto de la pantalla principal</string>
     <string name="widget_text_color_summary">"Color del texto del widget"</string>
     <string name="pressure_units">Unidades de presión</string>
-    <string name="pressure_units_mb">" mb"</string>
+    <string name="pressure_units_mb">" hPa"</string>
     <string name="pressure_units_mmhg">" mmHg"</string>
     <string name="wind_speed_units">Unidad de viento</string>
     <string name="wind_speed_units_mps">" m/s"</string>
