--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<string name="new_version">Новая версия</string> 
+	<string name="upgrade">Обновить</string> 
+	<string name="not_now">Не сейчас</string> 
     <string name="donations_button_close">Закрыть</string> 
   	<string name="donations_flattr">Flattr</string> 
   	<string name="donations_description">Считаете ли вы приложение полезным?\nПоддержите разработчика через flattr или отправьте пожертвование через Google Play Store!</string> 
@@ -19,6 +22,7 @@
     <string name="close">Закрыть</string>
     <string name="ok">OK</string>
     <string name="cancel">Отмена</string>
+    <string name="loading">Загрузка\u2026</string>
     <string name="donate">Пожертвование</string> 
     <string name="settings_check_updates_title">Проверять обновления</string>
     <string name="settings_check_updates_summary">Проверять наличие новой версии приложения при запуске</string>        
